首頁列表更新

--- a/index.html
+++ b/index.html
@@ -4,67 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Build School作業列表</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-    <style>
-        .header {
-            /* text-align: center; */
-            background-color: #eee;
-        }
-
-        .header .container {
-            display: flex;
-            justify-content: space-around;
-            box-sizing: border-box;
-            width: 960px;
-            margin: 0 auto;
-            padding: 15px 15px;
-        }
-
-        .header .container .title {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-end;
-        }
-
-        .title {
-            color: #00c4c4;
-            font-family: 'Noto Sans TC', sans-serif;
-        }
-
-        .title h1 {
-            font-size: 40px;
-        }
-
-        .title span {
-            font-size: 25px;
-        }
-
-        .hw-content {
-            max-width: 960px;
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        .hw-list {
-            font-size: 20px;
-        }
-
-        .hw-list a {
-            text-decoration: none;
-            line-height: 2em;
-            color: #0066ff;
-        }
-
-        .hw-list a:hover {
-            color: purple;
-        }
-    </style>
+    <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
-
     <div class="header">
         <div class="container">
             <img src="img/BuildSchool.png" alt="BuildSchool">
@@ -76,6 +21,7 @@
     </div>
     <div class="hw-content">
         <ul class="hw-list">
+            <h3>HTML、CSS</h3>
             <li>
                 <a href="BSHomeWork1/index.html" target="_blank">作業01：課表TABLE表格</a>
             </li>
@@ -96,6 +42,16 @@
             </li>
             <li>
                 <a href="BSHomeWork7/index.html" target="_blank">作業07：TAKEN網站切版(Bootstrap)</a>
+            </li>
+        </ul>
+        <ul class="hw-list">
+            <h3>JavaScript</h3>
+            <li>
+                <a href="https://github.com/win50117/Build-School-Web-HW/blob/master/BS-JSHomeWork1/Ascii%20Hw.js"
+                    target="_blank">作業01：ASCII</a>
+            </li>
+            <li>
+                <a href="BS-JSHomeWork2/index.html" target="_blank">作業02：肺炎HTML資料表</a>
             </li>
         </ul>
     </div>
