--- a/BS-JSHomeWork3/index.html
+++ b/BS-JSHomeWork3/index.html
@@ -34,7 +34,7 @@
                                 </div>
                             </div>
                             <div class="col-6 col-lg-6">
-                                <div class="item item-siver border text-center">
+                                <div class="item item-silver border text-center">
                                     <i class="fas fa-circle fa-3x silver"></i>
                                     <p>銀色</p>
                                 </div>
@@ -51,16 +51,26 @@
 
                         <div class="row">
                             <div class="col-6 col-lg-6">
-                                <div class="item price-32 border text-center">
+                                <input type="radio" name="storage" id="gb32" value="32GB"">
+                                <label class=" item storage-32 border text-center" for="gb32">
+                                <p>32GB</p>
+                                <!-- <p class="price">NT$10900</p> -->
+                                </label>
+                                <!-- <div class="item price-32 border text-center">
                                     <p>32GB</p>
                                     <p class="price">NT$10900</p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-6 col-lg-6">
-                                <div class="item price-128 border text-center">
+                                <input type="radio" name="storage" id="gb128" value="128GB">
+                                <label class="item storage-128 border text-center" for="gb128">
+                                    <p>128GB</p>
+                                    <!-- <p class="price">NT$13900</p> -->
+                                </label>
+                                <!-- <div class="item price-128 border text-center">
                                     <p>128GB</p>
                                     <p class="price">NT$13900</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -68,16 +78,26 @@
 
                         <div class="row">
                             <div class="col-6 col-lg-6">
-                                <div class="item wifi border text-center">
+                                <input type="radio" name="network" id="wifi">
+                                <label class="item wifi border text-center" for="wifi">
+                                    <p>Wi-Fi</p>
+                                    <!-- <p class="price">NT$10900</p> -->
+                                </label>
+                                <!-- <div class="item wifi border text-center">
                                     <p>Wi-Fi</p>
                                     <p class="price">NT$10900</p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-6 col-lg-6">
-                                <div class="item wifimobi border text-center">
+                                <input type="radio" name="network" id="mobiNet">
+                                <label class="item mobiNet border text-center" for="mobiNet">
+                                    <p>Wi-Fi + 行動網路</p>
+                                    <!-- <p class="price">NT$10900</p> -->
+                                </label>
+                                <!-- <div class="item wifimobi border text-center">
                                     <p>Wi-Fi + 行動網路</p>
                                     <p class="price">NT$15400</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <h1>價格試算:<span class="sum-price"></span></h1>
