--- a/BS-JSHomeWork3/index.html
+++ b/BS-JSHomeWork3/index.html
@@ -28,19 +28,19 @@
                         <h1>顏色</h1>
                         <div class="row">
                             <div class="col-6 col-lg-6">
-                                <div class="item item-space border text-center">
+                                <div class="item item-space text-center">
                                     <i class="fas fa-circle fa-3x space"></i>
                                     <p>太空灰</p>
                                 </div>
                             </div>
                             <div class="col-6 col-lg-6">
-                                <div class="item item-silver border text-center">
+                                <div class="item item-silver text-center">
                                     <i class="fas fa-circle fa-3x silver"></i>
                                     <p>銀色</p>
                                 </div>
                             </div>
                             <div class="col-6 col-lg-6">
-                                <div class="item item-gold border text-center">
+                                <div class="item item-gold text-center">
                                     <i class="fas fa-circle fa-3x gold"></i>
                                     <p>金色</p>
                                 </div>
@@ -52,22 +52,22 @@
                         <div class="row">
                             <div class="col-6 col-lg-6">
                                 <input type="radio" name="storage" id="gb32" value="32GB"">
-                                <label class=" item storage-32 border text-center" for="gb32">
+                                <label class=" item storage-32 text-center" for="gb32">
                                 <p>32GB</p>
                                 <!-- <p class="price">NT$10900</p> -->
                                 </label>
-                                <!-- <div class="item price-32 border text-center">
+                                <!-- <div class="item price-32 text-center">
                                     <p>32GB</p>
                                     <p class="price">NT$10900</p>
                                 </div> -->
                             </div>
                             <div class="col-6 col-lg-6">
                                 <input type="radio" name="storage" id="gb128" value="128GB">
-                                <label class="item storage-128 border text-center" for="gb128">
+                                <label class="item storage-128 text-center" for="gb128">
                                     <p>128GB</p>
                                     <!-- <p class="price">NT$13900</p> -->
                                 </label>
-                                <!-- <div class="item price-128 border text-center">
+                                <!-- <div class="item price-128 text-center">
                                     <p>128GB</p>
                                     <p class="price">NT$13900</p>
                                 </div> -->
@@ -79,22 +79,22 @@
                         <div class="row">
                             <div class="col-6 col-lg-6">
                                 <input type="radio" name="network" id="wifi">
-                                <label class="item wifi border text-center" for="wifi">
+                                <label class="item wifi text-center" for="wifi">
                                     <p>Wi-Fi</p>
                                     <!-- <p class="price">NT$10900</p> -->
                                 </label>
-                                <!-- <div class="item wifi border text-center">
+                                <!-- <div class="item wifi text-center">
                                     <p>Wi-Fi</p>
                                     <p class="price">NT$10900</p>
                                 </div> -->
                             </div>
                             <div class="col-6 col-lg-6">
                                 <input type="radio" name="network" id="mobiNet">
-                                <label class="item mobiNet border text-center" for="mobiNet">
+                                <label class="item mobiNet text-center" for="mobiNet">
                                     <p>Wi-Fi + 行動網路</p>
                                     <!-- <p class="price">NT$10900</p> -->
                                 </label>
-                                <!-- <div class="item wifimobi border text-center">
+                                <!-- <div class="item wifimobi text-center">
                                     <p>Wi-Fi + 行動網路</p>
                                     <p class="price">NT$15400</p>
                                 </div> -->
