--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             <li>
                 <a href="BS-JSHomeWork2/index.html" target="_blank">作業02：肺炎HTML資料表</a>
             </li>
+            <li>
+                <a href="BS-JSHomeWork3/index.html" target="_blank">作業03：Apple網站商品選單</a>
+            </li>
+            <li>
+                <a href="BS-JSHomeWork4/index.html" target="_blank">作業04：1A2B猜數字</a>
+            </li>
         </ul>
     </div>
 
