使用者體驗修改

--- a/BS-JSHomeWork4/index.html
+++ b/BS-JSHomeWork4/index.html
@@ -20,7 +20,8 @@
             <div class="row justify-content-center my-3">
                 <div class="select">
                     <button class="btn btn-primary btn-lg btn-start" type="submit">開始遊戲</button>
-                    <button class="btn btn-primary btn-lg btn-reset" type="submit">放棄重來</button>
+                    <button class="btn btn-primary btn-lg btn-reset" type="submit" data-toggle="modal"
+                        data-target="#exampleModal">放棄重來</button>
                     <!-- <button class="btn btn-primary btn-lg btn-quest" type="submit">查看答案</button> -->
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary btn-lg btn-quest" data-toggle="modal"
