--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <li>
                 <a href="BS-JSHomeWork4-1A2B/index.html" target="_blank">作業04：1A2B猜數字</a>
             </li>
+            <li>
+                <a href="BS-JSHomeWork5-Calculator/index.html" target="_blank">作業05：計算機</a>
+            </li>
         </ul>
     </div>
 
