--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                 <a href="BS-JSHomeWork2-COVID/index.html" target="_blank">作業02：肺炎HTML資料表</a>
             </li>
             <li>
-                <a href="BS-JSHomeWork3-Apple/index.html" target="_blank">作業03：Apple網站商品選單</a>
+                <a href="BS-JSHomeWork3-Apple/index.html" target="_blank">作業03：Apple網站商品選單 V1</a>
+            </li>
+            <li>
+                <a href="BS-JSHomeWork3-Apple-v2/index.html" target="_blank">作業03：Apple網站商品選單 V2</a>
             </li>
             <li>
                 <a href="BS-JSHomeWork4-1A2B/index.html" target="_blank">作業04：1A2B猜數字</a>
