--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <li>
                 <a href="BS-JSHomeWork5-Calculator/index.html" target="_blank">作業05：計算機</a>
             </li>
+            <li>
+                <a href="BS-JSHomeWork6-PizzaCard-Template/index.html" target="_blank">作業06：Pizza Card</a>
+            </li>
         </ul>
     </div>
 
