--- a/BS-JSHomeWork5-Calculator/index.html
+++ b/BS-JSHomeWork5-Calculator/index.html
@@ -17,8 +17,8 @@
 <body>
     <div class="container">
         <h1 class="text-center">計算機</h1>
-        <input type="text" class="all-calc border text-right w-100 py-2" value=""></input>
-        <input type="text" class="sub-calc border text-right w-100 py-3" value=""></input>
+        <input type="text" class="all-calc border text-right w-100 py-2" value="" readonly="readonly"></input>
+        <input type="text" class="sub-calc border text-right w-100 py-3" value="" readonly="readonly"></input>
         <div class="row">
             <div class="col-3 col-lg-3">
                 <lable class="" data-math="%">%</lable>
