--- a/BS-JSHomeWork6-PizzaCard-Template/index.html
+++ b/BS-JSHomeWork6-PizzaCard-Template/index.html
@@ -68,6 +68,9 @@
             <img src="" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title"></h5>
+                <h5 class="card-eng-title"></h5>
+                <div class="food"></div>
+                <p class="price"></p>
                 <p class="card-text"></p>
                 <button href="#" class="btn btn-primary">詳細內容</a>
             </div>
