--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             <li>
                 <a href="BS-JSHomeWork6-PizzaCard-Template/index.html" target="_blank">作業06：Pizza Card</a>
             </li>
+            <li>
+                <a href="BS-JS-Hackathon1/index.html" target="_blank">前端黑客松：口罩地圖</a>
+            </li>
         </ul>
     </div>
 
