--- a/BS-JS-Hackathon1/index.html
+++ b/BS-JS-Hackathon1/index.html
@@ -14,7 +14,7 @@
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-eObv-SeP0DUErpbkqNEDOQHTZDTgM3g&callback=initMap&libraries=&v=weekly"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-eObv-SeP0DUErpbkqNEDOQHTZDTgM3g&libraries=&v=weekly"
         defer>
     </script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
