--- a/BS-JS-Hackathon1/index.html
+++ b/BS-JS-Hackathon1/index.html
@@ -17,6 +17,9 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-eObv-SeP0DUErpbkqNEDOQHTZDTgM3g&libraries=&v=weekly"
         defer>
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-eObv-SeP0DUErpbkqNEDOQHTZDTgM3g&libraries=places">
+    </script>
+
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <link rel="stylesheet" href="all.css">
 </head>
@@ -25,9 +28,9 @@
     <div class="container-fluid">
         <div class="row h-100">
             <div class="col-2 col-lg-2">
-                <!-- <div class="text-center">
+                <div class="text-center">
                     <input id="pac-input" class="controls" type="text" placeholder="地址搜尋" />
-                </div> -->
+                </div>
                 <div class="area">
                     <select class="selectCounty">
                         <option value="" style="display: none">請選擇行政區域...</option>
@@ -37,6 +40,7 @@
                     </select>
                 </div>
                 <div class="list">
+                    <!-- template樣板插入位置 -->
                 </div>
             </div>
             <div class="col-10 col-lg-10">
@@ -77,6 +81,84 @@
     </script>
 
     <script src="all.js"></script>
+    <script>
+        "use strict";
+
+        // This example adds a search box to a map, using the Google Place Autocomplete
+        // feature. People can enter geographical searches. The search box will return a
+        // pick list containing a mix of places and predicted search terms.
+        // This example requires the Places library. Include the libraries=places
+        // parameter when you first load the API. For example:
+        // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
+        function initAutocomplete() {
+            const map = new google.maps.Map(document.getElementById("map"), {
+                center: {
+                    lat: -33.8688,
+                    lng: 151.2195
+                },
+                zoom: 13,
+                mapTypeId: "roadmap"
+            }); // Create the search box and link it to the UI element.
+
+            const input = document.getElementById("pac-input");
+            const searchBox = new google.maps.places.SearchBox(input);
+            map.controls[google.maps.ControlPosition.TOP_LEFT].push(
+                input); // Bias the SearchBox results towards current map's viewport.
+
+            map.addListener("bounds_changed", () => {
+                searchBox.setBounds(map.getBounds());
+            });
+            let markers = []; // Listen for the event fired when the user selects a prediction and retrieve
+            // more details for that place.
+
+            searchBox.addListener("places_changed", () => {
+                const places = searchBox.getPlaces();
+
+                if (places.length == 0) {
+                    return;
+                } // Clear out the old markers.
+
+                markers.forEach(marker => {
+                    marker.setMap(null);
+                });
+                markers = []; // For each place, get the icon, name and location.
+
+                const bounds = new google.maps.LatLngBounds();
+                places.forEach(place => {
+                    if (!place.geometry) {
+                        console.log("Returned place contains no geometry");
+                        return;
+                    }
+
+                    const icon = {
+                        url: place.icon,
+                        size: new google.maps.Size(71, 71),
+                        origin: new google.maps.Point(0, 0),
+                        anchor: new google.maps.Point(17, 34),
+                        scaledSize: new google.maps.Size(25, 25)
+                    }; // Create a marker for each place.
+
+                    markers.push(
+                        new google.maps.Marker({
+                            map,
+                            icon,
+                            title: place.name,
+                            position: place.geometry.location
+                        })
+                    );
+
+                    if (place.geometry.viewport) {
+                        // Only geocodes have viewport.
+                        bounds.union(place.geometry.viewport);
+                    } else {
+                        bounds.extend(place.geometry.location);
+                    }
+                });
+                map.fitBounds(bounds);
+            });
+        }
+    </script>
+
 </body>
 
 </html>
