--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="BS-JSHomeWork6-PizzaCard-Template/index.html" target="_blank">作業06：Pizza Card</a>
             </li>
             <li>
-                <a href="BS-JS-Hackathon1/index.html" target="_blank">前端黑客松：口罩地圖</a>
+                <a href="BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html" target="_blank">前端黑客松：口罩地圖</a>
             </li>
         </ul>
     </div>
