--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html
@@ -28,11 +28,12 @@
 <body>
     <div class="container-fluid">
         <div class="row h-100">
-            <div class="col-2 col-lg-2">
-                <div class="text-center">
-                    <input id="pac-input" class="controls" type="text" placeholder="地址搜尋" />
-                </div>
+            <div class="col-3 col-lg-3 select-bar">
+
                 <div class="area">
+                    <!-- <div class="text-center">
+                    <input id="pac-input" class="controls" type="text" placeholder="地址搜尋" />
+                </div> -->
                     <select class="selectCounty">
                         <option value="" style="display: none">請選擇行政區域...</option>
                     </select>
@@ -40,34 +41,43 @@
                         <option value="" style="display: none">請選擇鄉鎮...</option>
                     </select>
                 </div>
-                <div class="list">
+                <div class="card-list">
                     <!-- template樣板插入位置 -->
                 </div>
             </div>
-            <div class="col-10 col-lg-10">
-                <div id="map"></div>
+            <div class="col-9 col-lg-9 map-box">
+                <div id="map">
+                    <div class="d-flex justify-content-center align-items-center vh-100">
+                        <div class="loading spinner-border" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <template id="list-temp">
-        <div class="list-item">
-            <h4 class="list-title"></h4>
-            <p class="list-address"></p>
-            <p class="list-phone"></p>
-            <span class="list-adult"></span>
-            <br>
-            <span class="list-child"></span>
+
+    <template id="card-template">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-head d-flex justify-content-between">
+                    <div class="adult-mask mask-left">
+                        成人口罩數量<br>
+                        <span class="adult-left left-num"></span>
+                        片
+                    </div>
+                    <div class="child-mask mask-left">
+                        兒童口罩數量<br>
+                        <span class="child-left left-num"></span>
+                        <span>片</span>
+                    </div>
+                </div>
+                <h5 class="card-title"></h5>
+                <p class="card-text card-address"></p>
+                <p class="card-text card-phone"></p>
+            </div>
         </div>
     </template>
-    <!-- <div class="area">
-        <select class="selectCounty">
-            <option value="" style="display: none">請選擇行政區域...</option>
-        </select>
-        <select class="selectTown">
-            <option value="" style="display: none">請選擇鄉鎮...</option>
-        </select>
-    </div> -->
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
