--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html
@@ -21,6 +21,7 @@
     </script>
 
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script src="https://kit.fontawesome.com/6f7f75ad47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="all.css">
     <link rel="shortcut icon" href="#" />
 </head>
@@ -72,7 +73,7 @@
                         <span>片</span>
                     </div>
                 </div>
-                <h5 class="card-title"></h5>
+                <h4 class="card-title"></h4>
                 <p class="card-text card-address"></p>
                 <p class="card-text card-phone"></p>
             </div>
