導航、點擊標示變更列表位置完成

--- a/BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html
+++ b/BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html
@@ -35,10 +35,10 @@
                     <!-- <div class="text-center">
                     <input id="pac-input" class="controls" type="text" placeholder="地址搜尋" />
                 </div> -->
-                    <select class="selectCounty">
+                    <select class="selectCounty browser-default custom-select">
                         <option value="" style="display: none">請選擇行政區域...</option>
                     </select>
-                    <select class="selectTown">
+                    <select class="selectTown browser-default custom-select">
                         <option value="" style="display: none">請選擇鄉鎮...</option>
                     </select>
                 </div>
