--- a/BS-JSHomeWork6-PizzaCard-Template/index.html
+++ b/BS-JSHomeWork6-PizzaCard-Template/index.html
@@ -43,19 +43,24 @@
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <div class="modal-header flex-column align-items-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
+                    <h4 class="modal-title" id="exampleModalLabel">Modal title</h4>
+                    <h5 class="modal-engtitle" id="engName">Modal engtitle</h5>
+
                 </div>
                 <div class="modal-body">
-                    <img id="pizzaImage">
-                    <h1 id="description" class="text-primary"></h1>
+                    <div class="picture text-center">
+                        <img id="pizzaImage" class=""></img>
+                    </div>
+                    <p class="comment"><i class="fas fa-comment"></i>美味說明</p>
+                    <h5 id="description" class=""></h5>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
             </div>
         </div>
