--- a/BS-JS-Hackathon2-Calendar/index.html
+++ b/BS-JS-Hackathon2-Calendar/index.html
@@ -72,15 +72,17 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="todo-title" id="exampleModalLabel">Modal title</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h4>代辦內容：</h4>
-                        <p class="todo-things"></p>
-                        <p class="todo-color"></p>
+                        <div class="todo-list">
+                            <h4 class="todo-title">Modal title</h4>
+                            <h5>代辦內容：</h5>
+                            <p class="todo-things"></p>
+                            <p class="todo-color"></p>
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
