--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <a href="BS-JS-Hackathon1-GoogleMapApi-MaskMap/index.html" target="_blank">前端黑客松01：口罩地圖</a>
             </li>
             <li>
+                <a href="BS-JSHomeWork7-Chart/index.html" target="_blank">作業07：Chart.js圖表</a>
+            </li>
+            <li>
                 <a href="BS-JS-Hackathon2-Calendar/index.html" target="_blank">前端黑客松02：行事曆</a>
             </li>
         </ul>
