增加輸入最大長度

--- a/BS-JSHomeWork4-1A2B/index.html
+++ b/BS-JSHomeWork4-1A2B/index.html
@@ -54,7 +54,7 @@
                 <!-- <li class="list-group-item">Cras justo odio</li> -->
             </ul>
             <div class="input-group mb-3">
-                <input type="text" class="form-control input-guess" placeholder="請輸入四位數字猜測"
+                <input type="text" maxlength="4" class="form-control input-guess" placeholder="請輸入四位數字猜測"
                     aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary btn-answer" type="button" id="button-addon2">猜數字！</button>
