--- a/BS-JS-HackAthon3-N-Puzzle/index.html
+++ b/BS-JS-HackAthon3-N-Puzzle/index.html
@@ -18,18 +18,26 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                </div>
-                <div class="custom-file">
-                    <input type="file" accept="image/*" class="custom-file-input file-input" id="inputGroupFile01"
-                        aria-describedby="inputGroupFileAddon01">
-                    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                </div>
+
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+            </div>
+            <div class="custom-file">
+                <input type="file" accept="image/*" class="custom-file-input file-input" id="inputGroupFile01"
+                    aria-describedby="inputGroupFileAddon01">
+                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
             </div>
         </div>
+        <span>選擇拼圖大小：</span>
+        <select class="puzzle-size-select" id="inputGroupSelect01">
+            <option value="2" selected>2 x 2</option>
+            <option value="3">3 x 3</option>
+            <option value="4">4 x 4</option>
+            <option value="5">5 x 5</option>
+            <option value="6">6 x 6</option>
+        </select>
+
         <div class="row">
             <div class="col-12 col-md-6">
                 <div id="puzzle-area">
