--- a/BS-JS-HackAthon3-N-Puzzle/index.html
+++ b/BS-JS-HackAthon3-N-Puzzle/index.html
@@ -66,8 +66,8 @@
             <div class="col-12 col-md-6">
                 <div>
                     <!-- 控制區 -->
-                    <button type="button" name="" id="shuffleBtn" class="btn btn-primary">打亂</button>
-                    <button type="button" name="" id="startBtn" class="btn btn-primary">開始</button>
+                    <button type="button" name="" id="shuffleBtn" class="btn btn-primary" disabled="true">打亂</button>
+                    <button type="button" name="" id="startBtn" class="btn btn-primary" disabled="true">開始</button>
                 </div>
             </div>
         </div>
