--- a/BS-JS-HackAthon3-N-Puzzle/index.html
+++ b/BS-JS-HackAthon3-N-Puzzle/index.html
@@ -67,7 +67,7 @@
                 <div>
                     <!-- 控制區 -->
                     <button type="button" name="" id="shuffleBtn" class="btn btn-primary" disabled="true">打亂</button>
-                    <button type="button" name="" id="startBtn" class="btn btn-primary" disabled="true">開始</button>
+                    <button type="button" name="" id="startBtn" class="btn btn-primary">使用預設圖片開始</button>
                 </div>
             </div>
         </div>
