--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             <li>
                 <a href="BS-JS-Hackathon2-Calendar/index.html" target="_blank">前端黑客松02：行事曆</a>
             </li>
+            <li>
+                <a href="BS-JS-HackAthon3-N-Puzzle/index.html" target="_blank">前端黑客松03：拼圖</a>
+            </li>
         </ul>
     </div>
 
