暫時關閉提示下一步

--- a/BS-JS-HackAthon3-N-Puzzle/index.html
+++ b/BS-JS-HackAthon3-N-Puzzle/index.html
@@ -70,7 +70,7 @@
                     <button type="button" name="" id="startBtn" class="btn btn-primary">使用預設圖片開始</button>
                     <button type="button" name="" id="bfs-alg"
                         class="btn btn-primary">使用BFS演算法找解答（用於2X2，3X3算1小時沒算完）</button>
-                    <button type="button" name="" id="go-next" class="btn btn-primary">提示下一步</button>
+                    <!-- <button type="button" name="" id="go-next" class="btn btn-primary">提示下一步</button> -->
                 </div>
             </div>
         </div>
